tutorials/gke/ipfs/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-loadbalancer
spec:
  ports:
  - port: 5001
    name: ipfs-api-port
  - port: 8080
    name: ipfs-gateway-port
  selector:
    app: ipfs
  type: LoadBalancer
